--- a/amoozesh.html
+++ b/amoozesh.html
@@ -11,7 +11,7 @@
 
     </head>
     <body  x-data="{toggleActive : $persist(false)} " :class=" toggleActive ? 'dark' : '' " class="overflow-x-clip">
-      <div class="dark:bg-black/75 bg-[#E5E5E5] transition duration-300">
+      <div class="dark:bg-[#1A1A1A] bg-[#E5E5E5] transition duration-300">
         <nav class="z-50 sticky text-center bg-[#353535] dark:bg-black/75" x-data="{ show: false }" >
           <div class="center w-auto mx-4 px-2 md:px-6 md:pl-10 ">
             <div class="relative flex items-center justify-between h-16">
@@ -109,46 +109,46 @@
         <div class="max-w-7xl mx-auto space-y-12 pb-40" dir="rtl" lang="ar">
           <div class="relative text-center mt-14 pb-10 sm:mx-6 md:mx-12">
             <div class="absolute top-4 right-0 w-[50%] h-px bg-[#80808080]"></div> 
-            <span class="relative inline-block z-10 font-extrabold text-4xl transition bg-neutral-200 dark:text-[#E5E5E5] duration-300 dark:bg-[#404040] text-center w-[20rem] sm:px-6 md:px-12 sm:w-auto" >آموزش مرحله دوم المپیاد فیزیک</span>
+            <span class="relative inline-block z-10 font-extrabold text-4xl transition bg-neutral-200 dark:text-[#E5E5E5] duration-300 dark:bg-[#1A1A1A] text-center w-[20rem] sm:px-6 md:px-12 sm:w-auto" >آموزش مرحله دوم المپیاد فیزیک</span>
             <div class="absolute left-0 top-16 h-px sm:top-4 w-[50%] bg-[#80808080]"></div> 
 
           </div>
-          <ul class="flex flex-col justify-center space-y-6 mx-[1rem]">
-            <li class="flex">
+          <ul class="flex flex-col justify-center space-y-6 mx-[1rem] dark:text-[#E5E5E5]">
+            <li class="flex dark:text-[#E5E5E5]">
               <div class="absolute bg-[#FF5E5E] rounded-[50px] w-3 h-16 self-center"></div>
-              <div class="bg-white rounded-[30px] space-y-4 p-5 shadow-lg mr-[6px] w-auto basis-[100%] lg:px-6">
-                <h2 class="text-[#FF5E5E]">عنوان درس اول</h2>
-                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
-            </li>
-            
-            <li class="flex">
-              <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10"></div>
-              <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6">
+              <div class="bg-white dark:bg-[#3A3A3A] rounded-[30px] space-y-4 p-5 shadow-lg mr-[6px] w-auto basis-[100%] lg:px-6">
                 <h2>عنوان درس اول</h2>
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
             </li>
+            
+            <li class="flex ">
+              <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10"></div>
+              <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6 dark:bg-[#3A3A3A]">
+                <h2>عنوان درس اول</h2>
+                <p >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
+            </li>
             <li class="flex">
               <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10"></div>
-              <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6">
+              <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6 dark:bg-[#3A3A3A]">
                 <h2>عنوان درس اول</h2>
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
             </li>
             <li x-data={show:false} class="space-y-6">
-              <div class="flex items-center justify-between bg-white h-[5rem] rounded-[30px] p-5 px-6 py-auto cursor-pointer" @click="show=!show">
+              <div class="flex items-center justify-between bg-white h-[5rem] rounded-[30px] p-5 px-6 py-auto cursor-pointer dark:bg-[#3A3A3A] "  @click="show=!show">
                 <h2 class="inline-block align-bottom">تست زیرفصل</h2>
                 <img src="src/arrow.svg" class="w-4 h-4 float-left justify-center transition" :class="{ ' -rotate-180 ': show }">
               </div>
               <ul x-show="show" class="p-5 border-2 border-[#808080] rounded-[30px] h-auto space-y-6">
-                <h2 class="dark:text-[#E5E5E5]">زیر فصل تست</h2>
+                <h2 class="dark:text-[#E5E5E5] ">زیر فصل تست</h2>
                 <li class="flex">
-                  <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10"></div>
-                  <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6">
+                  <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10 "></div>
+                  <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6 dark:bg-[#3A3A3A]">
                     <h2>عنوان درس اول</h2>
                     <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
                 </li>
                 <li class="flex">
                   <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10"></div>
-                  <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6">
+                  <div class="bg-white basis-[100%] rounded-[30px] space-y-4 p-5 mr-[6px] px-6 dark:bg-[#3A3A3A]">
                     <h2>عنوان درس اول</h2>
                     <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که...</p></div>
                 </li>
