--- a/amoozesh.html
+++ b/amoozesh.html
@@ -50,8 +50,8 @@
                           <input type="checkbox" name="" id="checkbox" class="hidden" @click="toggleActive = !toggleActive" />
                           <label for="checkbox" class="cursor-pointer" >
                             <!-- dark:bg-[#4b5966] -->
-                            <div class="w-11 h-4 flex items-center rounded-full p2  transition duration-300 bg-gray-300 ">
-                              <div class="w-4 h-3 bg-white switch-ball rounded-full dark:bg-[#4b5966] shadow duration-300" :class=" toggleActive ? 'translate-x-[26px]' : 'translate-x-[2px]' " ></div>
+                            <div class="w-11 h-4 flex items-center dark:bg-[#FF5E5E] rounded-full p-2 transition duration-300 bg-transparent border-[2px] border-[#E5E5E5] dark:border-[#FF5E5E] ">
+                              <div class="w-4 h-3 bg-[#E5E5E5] switch-ball rounded-full shadow duration-300" :class=" toggleActive ? 'translate-x-[14px]' : 'translate-x-[-6px]' " ></div>
                             </div>
                           </label>
                         </div>
@@ -138,7 +138,7 @@
                 <h2 class="inline-block align-bottom">تست زیرفصل</h2>
                 <img src="src/arrow.svg" class="w-4 h-4 float-left justify-center transition" :class="{ ' -rotate-180 ': show }">
               </div>
-              <ul x-show="show" class="p-5 border-2 border-[#808080] rounded-[30px] h-auto space-y-6">
+              <ul x-show="show" class="p-5 border-[1px] border-[#808080] rounded-[30px] h-auto space-y-6">
                 <h2 class="dark:text-[#E5E5E5] ">زیر فصل تست</h2>
                 <li class="flex">
                   <div class="absolute float-right self-center bg-[#FF5E5E] rounded-[50px] w-3 h-10 "></div>
